# glimpse-a2ui

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  HUMANS.txt  LLMS.txt  NOTICE  README.md  SKILL.md  package-lock.json  package.json  test.mjs  tsconfig.json
knowledge/: 20260509-121003.a2ui-spec-grounding.knowledge.md  20260509-130112.poc-retrospective.retrospective.md  20260509-140000.polish-and-hardening-plan.plan.md  20260509-141700.phase1-visual-harness.retrospective.md  20260509-145843.parallel-agent-log-fragments.knowledge.md  20260509-152436.worktree-isolation-verification.knowledge.md  20260509-154525.vendored-renderer-pathologies.knowledge.md  20260509-160946.agent-dispatch-procedure.knowledge.md  20260509-162039.a2ui-protocol-overview.knowledge.md  20260509-162039.external-references.reference.md  20260509-162039.fork-architecture.analysis.md  20260509-162039.glimpse-upstream-snapshot.knowledge.md  20260509-172345.renderer-revendor-runbook.knowledge.md  20260509-172625.apple-developer-onboarding.knowledge.md  20260509-173913.desktop-pet-sprite-ecosystem.knowledge.md  20260509-180000.agent-control-surface.knowledge.md  20260509-214700.shadow-dom-css-scoping-pathology.knowledge.md  20260509-220000.investigation-methodology-and-lever-vocabulary.knowledge.md  20260510-020000.parallel-branch-host-hash.knowledge.md  20260510-035000.visual-fixture-consolidation-decision.knowledge.md  AUDIT_LOG.md  DEV_LOG.md  INDEX.md  (+2 more)
src/linux/: Cargo.toml
src/linux/src/: bridge.rs  cursor.rs  hyprland.rs  io.rs  main.rs  protocol.rs  sysinfo.rs
(+100 files in other folders)
